--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,30 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@next-tools/dynamic": "^0.0.11",
+    "@rollup/plugin-inject": "^5.0.5",
+    "@solana/spl-token": "^0.4.8",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.2",
+    "@tabler/icons-react": "^3.14.0",
+    "@tanstack/react-query-next-experimental": "^5.53.1",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.4",
+    "buffer": "^6.0.3",
+    "daisyui": "^4.12.10",
     "framer-motion": "^11.3.29",
+    "jotai": "^2.9.3",
+    "jotai-utils": "^0.0.0",
+    "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
