--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@coral-xyz/anchor": "^0.30.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@next-tools/dynamic": "^0.0.11",
@@ -23,6 +24,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.2",
     "@tabler/icons-react": "^3.14.0",
+    "@tanstack/react-query": "^5.55.4",
     "@tanstack/react-query-next-experimental": "^5.53.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
@@ -36,7 +38,6 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
