--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,16 +23,17 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.2",
-    "@tabler/icons-react": "^3.14.0",
+    "@tabler/icons-react": "3.16.0",
     "@tanstack/react-query": "^5.55.4",
-    "@tanstack/react-query-next-experimental": "^5.53.1",
+    "@tanstack/react-query-next-experimental": "5.55.4",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.4",
+    "axios": "1.7.7",
     "buffer": "^6.0.3",
     "daisyui": "^4.12.10",
     "framer-motion": "^11.3.29",
     "jotai": "^2.9.3",
     "jotai-utils": "^0.0.0",
+    "next": "^14.2.9",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -41,16 +42,16 @@
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
+    "@eslint/js": "9.10.0",
+    "@types/react": "18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint": "9.10.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.11",
     "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "typescript": "5.6.2",
+    "typescript-eslint": "8.5.0",
+    "vite": "5.4.4"
   }
 }
